--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.0"
+    "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vue": "^2.1.1",
+    "astro": "^2.3.0",
+    "tailwindcss": "^3.3.1",
+    "vue": "^3.2.47",
+    "vue3-carousel": "^0.3.0"
   }
 }
