--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro-netlify-cms": "^0.5.3",
     "tailwindcss": "^3.3.1",
     "vue3-carousel": "^0.3.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
