--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,6 +6,37 @@ media_folder: "public/images/uploads"
 public_folder: '/images/uploads'
 
 collections:
+- label: "Pages"
+  name: "pages"
+  files:
+    - label: "Homepage"
+      name: "homepage"
+      file: "content/home.md"
+      fields:
+        - { label: About, name: about, widget: markdown }
+        - { label: Info, name: info, widget: markdown }
+        - name: faq
+          label: FAQ
+          widget: list
+          fields:
+            - { label: 'Vraag', name: 'title', widget: 'string' }
+            - { label: 'Antwoord', name: 'body', widget: 'markdown' }
+    - label: "About"
+      name: "about"
+      file: "content/about.md"
+      fields:
+        - { label: 'Title', name: 'title', widget: 'string' }
+        - { label: Body text, name: body, widget: markdown }  
+        - { name: image, label: Image, widget: image }
+    - label: "Process"
+      name: "process"
+      file: "content/process.md"
+      fields:
+        - { label: 'Title', name: 'title', widget: 'string' }
+        - { label: Body text, name: body, widget: markdown }
+        - { name: imageleft, label: "Image right", widget: image }
+        - { name: imagebottom, label: "Image bottom", widget: image }
+
 - name: 'projects'
   label: 'Projects'
   label_singular: 'Project'
