--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vue": "^2.1.1",
     "astro": "^2.2.1",
     "astro-netlify-cms": "^0.5.3",
+    "axios": "^1.4.0",
     "tailwindcss": "^3.3.1",
     "vue3-carousel": "^0.3.0"
   },
