--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,13 +28,15 @@ collections:
         - { label: 'Title', name: 'title', widget: 'string' }
         - { label: Body text, name: body, widget: markdown }  
         - { name: image, label: Image, widget: image }
-    - label: "Process"
+    - label: "Interieuradvies"
       name: "process"
       file: "content/process.md"
       fields:
         - { label: 'Title', name: 'title', widget: 'string' }
         - { label: Body text, name: body, widget: markdown }
-        - { name: imageleft, label: "Image right", widget: image }
+        - { name: imageright1, label: "Image right 1", widget: image }
+        - { name: imageright2, label: "Image right 2", widget: image }
+        - { name: imageright3, label: "Image right 3", widget: image }
         - { name: imagebottom, label: "Image bottom", widget: image }
 
 - name: 'projects'
